--- a/src/paths/scripts/fetchAll.yaml
+++ b/src/paths/scripts/fetchAll.yaml
@@ -3,12 +3,12 @@ tags:
   - scripts
 operationId: scriptsFetchAll
 parameters:
-  - "../../parameters/query/scripts/Version.yaml"
-  - "../../parameters/query/scripts/Name.yaml"
-  - "../../parameters/query/scripts/Label.yaml"
-  - "../../parameters/query/pagination/Page.yaml"
-  - "../../parameters/query/pagination/Size.yaml"
-  - "../../parameters/query/pagination/Sort.yaml"
+  - $ref: "../../parameters/query/scripts/Version.yaml"
+  - $ref: "../../parameters/query/scripts/Name.yaml"
+  - $ref: "../../parameters/query/scripts/Label.yaml"
+  - $ref: "../../parameters/query/pagination/Page.yaml"
+  - $ref: "../../parameters/query/pagination/Size.yaml"
+  - $ref: "../../parameters/query/scripts/Sort.yaml"
 responses:
   '200':
     description: Expected response to a valid request
