--- a/src/schemas/_index.yaml
+++ b/src/schemas/_index.yaml
@@ -22,6 +22,28 @@ PageLinks:
 PaginationProperties:
   $ref: "./pagination/PaginationProperties.yaml"
 
+# Datasets
+DatasetDto:
+  $ref: "./datasets/DatasetDto.yaml"
+DatasetImplementationLabelDto:
+  $ref: "./datasets/DatasetImplementationLabelDto.yaml"
+InMemoryDatasetImplementationDto:
+  $ref: "./datasets/InMemoryDatasetImplementationDto.yaml"
+InMemoryDatasetImplementationKeyValueDto:
+  $ref: "./datasets/InMemoryDatasetImplementationKeyValueDto.yaml"
+PagedDatasetDto:
+  $ref: "./datasets/PagedDatasetDto.yaml"
+DatasetPostDto:
+  $ref: "./datasets/DatasetPostDto.yaml"
+DatasetImplementationLabelPostDto:
+  $ref: "./datasets/DatasetImplementationLabelPostDto.yaml"
+InMemoryDatasetImplementationPostDto:
+  $ref: "./datasets/InMemoryDatasetImplementationPostDto.yaml"
+InMemoryDatasetImplementationKeyValuePostDto:
+  $ref: "./datasets/InMemoryDatasetImplementationKeyValuePostDto.yaml"
+DatasetPutDto:
+  $ref: "./datasets/DatasetPutDto.yaml"
+
 # Errors
 Error:
   $ref: "./Error.yaml"
