--- a/src/paths/datasets/updateByUuid.yaml
+++ b/src/paths/datasets/updateByUuid.yaml
@@ -14,7 +14,7 @@ responses:
   '200':
     description: Expected response to a valid request
     content:
-      '*/*':
+      application/json:
         schema:
           $ref: '../../schemas/datasets/DatasetDto.yaml'
   '400':
