add type to dataset implementation

--- a/src/parameters/_index.yaml
+++ b/src/parameters/_index.yaml
@@ -14,6 +14,9 @@ QueryScriptsName:
 QueryScriptsVersion:
   $ref: './query/scripts/Version.yaml'
 
+QueryScriptsLabel:
+  $ref: './query/scripts/Label.yaml'
+
 QueryScriptsSort:
   $ref: './query/scripts/Sort.yaml'
 
