--- a/src/schemas/datasets/InMemoryDatasetImplementationPostDto.yaml
+++ b/src/schemas/datasets/InMemoryDatasetImplementationPostDto.yaml
@@ -8,3 +8,7 @@ properties:
     type: array
     items:
       $ref: '../../schemas/datasets/DatasetImplementationLabelPostDto.yaml'
+  type:
+    type: string
+    enum:
+      - in_memory
