--- a/src/schemas/scripts/ScriptDto.yaml
+++ b/src/schemas/scripts/ScriptDto.yaml
@@ -2,6 +2,8 @@ type: object
 properties:
   name:
     type: string
+  securityGroupName:
+    type: string
   description:
     type: string
   version:
