--- a/src/schemas/datasets/PagedDatasetDto.yaml
+++ b/src/schemas/datasets/PagedDatasetDto.yaml
@@ -3,7 +3,7 @@ properties:
   _embedded:
     type: object
     properties:
-      scripts:
+      datasets:
         type: array
         items:
           $ref: '../../schemas/datasets/DatasetDto.yaml'
