--- a/src/schemas/teams/PagedTeamDto.yaml
+++ b/src/schemas/teams/PagedTeamDto.yaml
@@ -3,7 +3,7 @@ properties:
   _embedded:
     type: object
     properties:
-      scripts:
+      teams:
         type: array
         items:
           $ref: '../../schemas/teams/TeamDto.yaml'
