--- a/src/schemas/users/PagedUserDto.yaml
+++ b/src/schemas/users/PagedUserDto.yaml
@@ -3,7 +3,7 @@ properties:
   _embedded:
     type: object
     properties:
-      scripts:
+      users:
         type: array
         items:
           $ref: '../../schemas/users/UserDto.yaml'
