--- a/src/paths/components/deleteByName.yaml
+++ b/src/paths/components/deleteByName.yaml
@@ -1,14 +1,12 @@
-summary: Fetch all components
+summary: Delete a specific component with all versions
 tags:
   - components
-operationId: componentsFetchAll
+operationId: componentsDeleteByName
+parameters:
+  - $ref: "../../parameters/path/components/Name.yaml"
 responses:
   '200':
     description: Expected response to a valid request
-    content:
-      application/json:
-        schema:
-          $ref: "../../schemas/components/EmbeddedComponentDto.yaml"
   '403':
     description: Expected response to a forbidden request
     content:
