--- a/src/paths/components/fetchByNameAndVersion.yaml
+++ b/src/paths/components/fetchByNameAndVersion.yaml
@@ -1,14 +1,14 @@
-summary: Fetch all components
+summary: Info of a specific component
 tags:
   - components
-operationId: componentsFetchAll
+operationId: componentsFetchByNameAndVersion
 responses:
   '200':
     description: Expected response to a valid request
     content:
       application/json:
         schema:
-          $ref: "../../schemas/components/EmbeddedComponentDto.yaml"
+          $ref: "../../schemas/components/ComponentDto.yaml"
   '403':
     description: Expected response to a forbidden request
     content:
