--- a/src/schemas/_index.yaml
+++ b/src/schemas/_index.yaml
@@ -14,6 +14,18 @@ ActionParameterDto:
 PagedScriptDto:
   $ref: "./scripts/PagedScriptDto.yaml"
 
+# Components
+ComponentDto:
+  $ref: "./components/ComponentDto.yaml"
+ComponentVersionDto:
+  $ref: "./components/ComponentVersionDto.yaml"
+ComponentParameterDto:
+  $ref: "./components/ComponentParameterDto.yaml"
+ComponentAttributeDto:
+  $ref: "./components/ComponentAttributeDto.yaml"
+EmbeddedComponentDto:
+  $ref: "./components/EmbeddedComponentDto.yaml"
+
 # Pagination
 Link:
   $ref: "./pagination/Link.yaml"
@@ -21,6 +33,7 @@ PageLinks:
   $ref: "./pagination/PageLinks.yaml"
 PaginationProperties:
   $ref: "./pagination/PaginationProperties.yaml"
+
 
 # Datasets
 DatasetDto:
@@ -109,6 +122,11 @@ SecurityGroupDtoList:
   $ref: "./security_groups/SecurityGroupDtoList.yaml"
 
 
+#Responses
+Response:
+  $ref: "./response/Response.yaml"
+ErrorResponse:
+  $ref: "./response/ErrorResponse.yaml"
 
 # Errors
 Error:
