add path variable for get method

--- a/src/paths/components/fetchByNameAndVersion.yaml
+++ b/src/paths/components/fetchByNameAndVersion.yaml
@@ -2,6 +2,9 @@ summary: Info of a specific component
 tags:
   - components
 operationId: componentsFetchByNameAndVersion
+parameters:
+  - $ref: "../../parameters/path/components/Name.yaml"
+  - $ref: "../../parameters/path/components/Version.yaml"
 responses:
   '200':
     description: Expected response to a valid request
