--- a/src/paths/components/fetchByName.yaml
+++ b/src/paths/components/fetchByName.yaml
@@ -2,6 +2,8 @@ summary: Fetch all versions of a specific component
 tags:
   - components
 operationId: componentsFetchByName
+parameters:
+  - $ref: "../../parameters/path/components/Name.yaml"
 responses:
   '200':
     description: Expected response to a valid request
