add fetchAll endpoint

--- a/src/paths/_index.yaml
+++ b/src/paths/_index.yaml
@@ -32,6 +32,9 @@
   delete:
     $ref: "./components/deleteByNameAndVersion.yaml"
 
+'/connections':
+  get:
+    $ref: "./connections/fetchAll.yaml"
 
 # Datasets
 '/datasets':
