add request body inside path method

--- a/src/paths/components/create.yaml
+++ b/src/paths/components/create.yaml
@@ -1,9 +1,14 @@
-summary: Post a new component
+summary: Create a new component
 tags:
   - components
 operationId: componentsCreate
 requestBody:
-  $ref: "../../requestBodies/components/ComponentDtoBody.yaml"
+  description: Body request that contains the ComponentDto object
+  required: true
+  content:
+    application/json:
+      schema:
+        $ref: "../../schemas/components/ComponentDto.yaml"
 responses:
   '200':
     description: Expected response to a valid request
@@ -12,19 +17,9 @@ responses:
         schema:
           $ref: "../../schemas/components/ComponentDto.yaml"
   '403':
-    description: Expected response to a forbidden request
-    content:
-      application/json:
-        schema:
-          $ref: "../../schemas/response/ErrorResponse.yaml"
-        example:
-          timestamp: "2021-02-09T07:57:01.062+0000"
-          status: 403
-          error: "Forbidden"
-          message: "Access denied"
-          path: "/api/components/"
+    $ref: "../../responses/components/ResponseComponentForbidden.yaml"
   '404':
-    description: Expected response to an existing component
+    description: Expected response to a non-existing component
     content:
       application/json:
         schema:
