--- a/src/paths/components/updateByNameAndVersion.yaml
+++ b/src/paths/components/updateByNameAndVersion.yaml
@@ -6,7 +6,12 @@ parameters:
   - $ref: "../../parameters/path/components/Name.yaml"
   - $ref: "../../parameters/path/components/Version.yaml"
 requestBody:
-  $ref: "../../requestBodies/components/ComponentDtoBody.yaml"
+  description: Body request that contains the ComponentDto object
+  required: true
+  content:
+    application/json:
+      schema:
+        $ref: "../../schemas/components/ComponentDto.yaml"
 responses:
   '200':
     description: Expected response to a valid request
@@ -27,17 +32,7 @@ responses:
           message: "Mismatch between url query 'HttpExecuteRequestss' and request body "
           path: "/api/components/HttpExecuteRequestss/1"
   '403':
-    description: Expected response to a forbidden request
-    content:
-      application/json:
-        schema:
-          $ref: "../../schemas/response/ErrorResponse.yaml"
-        example:
-          timestamp: "2021-02-09T07:57:01.062+0000"
-          status: 403
-          error: "Forbidden"
-          message: "Access denied"
-          path: "/api/components/"
+    $ref: "../../responses/components/ResponseComponentForbidden.yaml"
   '404':
     description: Expected response to a un-existing component
 
