add default response for forbidden access

--- a/src/responses/_index.yaml
+++ b/src/responses/_index.yaml
@@ -2,3 +2,7 @@ UnexpectedError:
   $ref: "./UnexpectedError.yaml"
 NullResponse:
   $ref: "./NullResponse.yaml"
+
+# Component 
+ResponseComponentForbidden:
+  $ref: "./components/ResponseComponentForbidden.yaml"
