--- a/src/paths/scripts/fetchByNameAndVersion.yaml
+++ b/src/paths/scripts/fetchByNameAndVersion.yaml
@@ -13,5 +13,7 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/scripts/ScriptDto.yaml"
+  '403':
+    $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
   '404':
     description: no script found with specified name and version
