--- a/src/paths/scripts/update.yaml
+++ b/src/paths/scripts/update.yaml
@@ -18,3 +18,5 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/scripts/ScriptDto.yaml"
+  '403':
+    $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
