--- a/src/paths/scripts/fetchAll.yaml
+++ b/src/paths/scripts/fetchAll.yaml
@@ -16,3 +16,5 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/scripts/PagedScriptDto.yaml"
+  '403':
+    $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
