--- a/src/paths/scripts/updateByNameAndVersion.yaml
+++ b/src/paths/scripts/updateByNameAndVersion.yaml
@@ -21,4 +21,18 @@ responses:
           $ref: "../../schemas/scripts/ScriptDto.yaml"
   '400':
     description: Expected response to a bad request
+    content:
+      application/json:
+        schema:
+          $ref: "../../schemas/response/ErrorResponse.yaml"
+        example:       
+          timestamp: 2021-02-09T13:50:52.083+0000
+          status: 400
+          error: Bad Request
+          message: Mismatch between url query '989' and request body
+          path: /api/scripts/fho.folderExists.2/989
+
+        
+  '403':
+    $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
 
