add forgotten schema in the updateAll connection response body

--- a/src/paths/connections/updateAll.yaml
+++ b/src/paths/connections/updateAll.yaml
@@ -17,6 +17,7 @@ responses:
     content:
       application/json:
         schema:
+          $ref: "../../schemas/connections/EmbeddedConnectionDto.yaml"
   '403':
     $ref: "../../responses/connections/ResponseConnectionForbidden.yaml"
   '404':
