--- a/src/paths/_index.yaml
+++ b/src/paths/_index.yaml
@@ -62,6 +62,28 @@
     $ref: './connections/updateByNameAndEnvironment.yaml'
   delete:
     $ref: "./connections/deleteByNameAndEnvironment.yaml"
+
+# Environments
+'/environments':
+  get:
+    $ref: "./environments/fetchAll.yaml"
+  post:
+    $ref: "./environments/create.yaml"
+  put:
+    $ref: "./environments/updateAll.yaml"
+  delete:
+    $ref: "./environments/deleteAll.yaml"
+'/environments/{name}':
+  get:
+    $ref: "./environments/fetchByName.yaml"
+  put:
+    $ref: "./environments/updateByName.yaml"
+  delete:
+    $ref: "./environments/deleteByName.yaml"
+
+'/environments/{name}/connections':
+  get:
+    $ref: "./environments/fetchConnectionsByName.yaml"
 # Datasets
 '/datasets':
   get:
