add response for script execution requests

--- a/src/responses/_index.yaml
+++ b/src/responses/_index.yaml
@@ -18,3 +18,7 @@ ResponseEnvironmentForbidden:
 # Execution Requests
 ResponseExecutionRequestForbidden:
   $ref: "./executionRequests/ResponseExecutionRequestForbidden.yaml"
+
+# Script execution
+ResponseScriptExecutionForbidden:
+  $ref: "./scriptExecutions/ResponseScriptExecutionForbidden.yaml"
