--- a/src/paths/scripts/updateByNameAndVersion.yaml
+++ b/src/paths/scripts/updateByNameAndVersion.yaml
@@ -6,7 +6,7 @@ parameters:
   - $ref: "../../parameters/path/scripts/Name.yaml"
   - $ref: "../../parameters/path/scripts/Version.yaml"
 requestBody:
-  description: Body request that contains the ScriptPostDto object
+  description: The existing Script to be updated
   required: true
   content:
     application/json:
